--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -123,7 +123,7 @@
             if (!userResponse.ok) throw new Error('Ошибка получения данных пользователя');
 
             const userData = await userResponse.json();
-            const notificationsResponse = await fetch(`/findNotificationByUserId?id=${userData.id}`, {
+            const notificationsResponse = await fetch(`/findNotificationByUserId?id=${userData.userId}`, {
                 credentials: 'include'
             });
 
