--- a/src/main/resources/templates/profile/profileSchoolStudent.html
+++ b/src/main/resources/templates/profile/profileSchoolStudent.html
@@ -34,6 +34,11 @@
 
     <div class="section">
         <h2>Расписание</h2>
+        <p><a href="#" class="link" id="scheduleLink">Обзор расписания</a></p>
+    </div>
+
+    <div class="section">
+        <h2>Дневник</h2>
         <p><a href="#" class="link" id="diaryLink">Обзор расписания</a></p>
     </div>
 
@@ -53,8 +58,9 @@
     const id = urlParams.get('id');
 
     if (id) {
-        document.getElementById('diaryLink').href = `schoolStudentSchedule?id=${id}`;
+        document.getElementById('scheduleLink').href = `schoolStudentSchedule?id=${id}`;
         document.getElementById('parentLink').href = `parentPage?id=${id}`;
+        document.getElementById('diaryLink').href = `schoolStudentDiary?id=${id}`;
 
         fetch(`/findSchoolStudentById?id=${id}`)
             .then(response => {
