--- a/src/main/resources/templates/groupGradebook.html
+++ b/src/main/resources/templates/groupGradebook.html
@@ -522,7 +522,7 @@
                 `/updateQuarterScore?quarterScoreId=${quarterScoreId}&score=${score}`;
 
             fetch(endpoint, {
-                method: 'GET',
+                method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                 }
