Added report page and controls, added news for parents, add 'blok' school page

--- a/src/main/resources/templates/adminSettings.html
+++ b/src/main/resources/templates/adminSettings.html
@@ -83,7 +83,7 @@
 <div id="moduleAddAdministrator" class="modal">
     <div class="modal-content">
         <span class="close-button" onclick="closeAllModules()">&times;</span>
-        <h2>Добавить Администратора</h2>
+        <h2>Добавить Администрацию</h2>
 
         <label for="adminFirstName">Имя</label>
         <input type="text" id="adminFirstName" placeholder="Имя" required>
@@ -93,6 +93,9 @@
 
         <label for="adminPatronymic">Отчество</label>
         <input type="text" id="adminPatronymic" placeholder="Отчество">
+
+        <label for="administrationSelect">Выберите должность:</label>
+        <select id="administrationSelect" required></select>
 
         <label for="adminLogin">Логин</label>
         <input type="text" id="adminLogin" placeholder="Логин" required>
