--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -84,6 +84,7 @@
                 case "Administration":
                     addButton(navContainer, schoolName, `/schoolPage?id=${schoolId}`);
                     addButton(navContainer, 'Профиль', `/profileAdministrator?id=${id}`);
+                    addButton(navContainer, 'Отчёты', `/reportList?id=${schoolId}`);
                     break;
 
                 case "Parent":
