--- a/src/main/resources/static/style/AdminSettings/ModuleAdd.css
+++ b/src/main/resources/static/style/AdminSettings/ModuleAdd.css
@@ -12,11 +12,19 @@
 
 .modal .modal-content {
     background-color: white;
-    margin: 15% auto;
+    margin: 10% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 300px;
     border-radius: 8px;
+}
+
+select {
+    width: 100%;
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    margin: 5px 0;
 }
 
 .modal .close-button {
@@ -39,6 +47,7 @@
 }
 
 .modal input[type="text"],
+.modal input[type="password"],
 .modal input[type="email"] {
     width: 93%;
     padding: 10px;
